--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "character-customization",
   "version": "0.1.0",
-  "homepage": "https://username.github.io/repo-name",
+  "homepage": "https://kiettt23.github.io/character-customization",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
